FIX: card alignments

--- a/src/styles.css
+++ b/src/styles.css
@@ -178,7 +178,7 @@
 	margin: 0.5% 0 0.5% 0.5%;
 }
 .map-container {
-	height: 100%;
+	height: 96%;
 	width: 30%;
 	padding: 0;
 	background-color: white;
